feat(api): add tenant api keys
